2010-03-11  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/os_cpu/linux_zero/vm/globals_linux_zero.hpp
	(ThreadStackSize): Increased by 512kb on 32-bit platforms so as
	to work on systems with 64kb page sizes.

2010-03-11  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/shark_globals_zero.hpp:
	Whitespace changes.

2010-03-10  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Add new patch.
	* patches/openjdk/6822370-reentrantreadwritelock.patch:
	Backported patch from HotSpot 16 to fix bug S6822370;
	threads blocked when the ReentrantReadWriteLock is
	not held.

2010-03-10  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(JAXP): Removed, redundant.
	(ABS_SOURCE_DIRS): No source code in $(abs_top_srcdir)/rt.
	(ICEDTEA_BOOTSTRAP_CLASSES): Unneeded.
	(HOTSPOT_MAKE_DIR): Redundant since switch to hs14.
	(stamps/ports.stamp): Remove use of HOTSPOT_MAKE_DIR.

2010-03-10  Hideki Yamane <henrich@debian.or.jp>

	* patches/icedtea-fonts.patch: Use Sazanami instead of Kochi for
	Japanese font on Debian/Ubuntu.

2010-03-09  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/IcedTeaNPPlugin.cc
	(consume_message): Handle the new reference field and send it back when
	sending proxy and cookie info.
	(get_proxy_info): Update response format for proxy information to make it
	consistent with new Gecko API.
	* plugin/icedteanp/IcedTeaPluginRequestProcessor.cc
	(newMessageOnBus): Account for the new reference field and send it back
	with the response.
	(sendWindow): Same.
	(eval): Same.
	(call): Same.
	(sendString): Same.
	(setMember): Same. Also, move responding code from _setMember to setMember
	for consistency and to solve a rather bad race condition that affected
	reliability.
	(sendMember): Account for the new reference field and send it back
	with the response.
	(queue_processor): Move array index slots based on new positions with
	reference ids.
	(_setMember): Move response code back to setMember.