@@ -1,5 +1,16 @@
 2010-03-11  Gary Benson  <gbenson@redhat.com>
 
+	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
+	(SharkCompiler::compile_method): Catch typeflow failures more
+	generally.
+	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.cpp
+	(SharkTopLevelBlock::scan_for_traps): New trap.
+	(SharkTopLevelBlock::do_call): Add assertion to check the above.
+	(SharkTopLevelBlock::static_subtype_check): Deal with unloaded
+	object_klass.
+
+2010-03-11  Gary Benson  <gbenson@redhat.com>
+
 	* ports/hotspot/src/os_cpu/linux_zero/vm/globals_linux_zero.hpp
 	(ThreadStackSize): Increased by 512kb on 32-bit platforms so as
 	to work on systems with 64kb page sizes.
